# SingleApplication

./: CMakeLists.txt  singleapplication.cpp  singleapplication.h
